@@ -1007,7 +1007,7 @@ verilog/example.v:108: NUMBER '19'
 verilog/example.v:108: OPERATOR ')'
 verilog/example.v:108: unreadback ' '
 verilog/example.v:108: SYMBOL '$uwarn_clk'
-verilog/example.v:108: unreadback ' '
+verilog/example.v:108: unreadback '  '
 verilog/example.v:108: OPERATOR '('
 verilog/example.v:108: SYMBOL 'clk'
 verilog/example.v:108: OPERATOR ','
@@ -1015,14 +1015,32 @@ verilog/example.v:108: STRING '"Called at next edge (1 of 2)\n"'
 verilog/example.v:108: OPERATOR ')'
 verilog/example.v:108: OPERATOR ';'
 verilog/example.v:109: unreadback '
+      '
+verilog/example.v:109: KEYWORD 'if'
+verilog/example.v:109: unreadback ' '
+verilog/example.v:109: OPERATOR '('
+verilog/example.v:109: SYMBOL 'i'
+verilog/example.v:109: OPERATOR '=='
+verilog/example.v:109: NUMBER '18'
+verilog/example.v:109: OPERATOR ')'
+verilog/example.v:109: unreadback ' '
+verilog/example.v:109: SYMBOL '$ucover_clk'
+verilog/example.v:109: unreadback ' '
+verilog/example.v:109: OPERATOR '('
+verilog/example.v:109: SYMBOL 'clk'
+verilog/example.v:109: OPERATOR ','
+verilog/example.v:109: SYMBOL 'example_cover_label'
+verilog/example.v:109: OPERATOR ')'
+verilog/example.v:109: OPERATOR ';'
+verilog/example.v:110: unreadback '
    '
-verilog/example.v:109: KEYWORD 'end'
-verilog/example.v:111: unreadback '
+verilog/example.v:110: KEYWORD 'end'
+verilog/example.v:112: unreadback '
 
 '
-verilog/example.v:111: KEYWORD 'endmodule'
-verilog/example.v:112: unreadback '
+verilog/example.v:112: KEYWORD 'endmodule'
+verilog/example.v:113: unreadback '
 '
-verilog/example.v:112: PREPROC '`line 112 "verilog/example.v" 2
+verilog/example.v:113: PREPROC '`line 113 "verilog/example.v" 2
 '
-verilog/example.v:112: ENDPARSE ''
+verilog/example.v:113: ENDPARSE ''
