@@ -9,6 +9,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Add vpm $uerror_clk and $uwarn_clk assertions.
 
+***	Add vpm $ucover_clk coverage expansions.
+
 ***	Vpm now enables `line comments unless using Verilog 1995.
 
 * Verilog::Language 3.041 2008/09/03
